feat: add the database properties in the spring app

--- a/journey_through_health/src/main/resources/application.yaml
+++ b/journey_through_health/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-      url: jdbc:postgresql://localhost:5432/iam
-      username: iam
-      password: iam
+      url: jdbc:postgresql://localhost:5432/journeydb
+      username: journey
+      password: journey
     jpa:
       hibernate:
         ddl-auto: update
