feat: include search support with elasticsearch

--- a/journey_through_health/src/main/resources/application.yaml
+++ b/journey_through_health/src/main/resources/application.yaml
@@ -6,4 +6,10 @@ spring:
     jpa:
       hibernate:
         ddl-auto: update
-
+    elasticsearch:
+      rest:
+        connection-timeout: 1s
+        uris: localhost:9200
+        read-timeout: 1m
+        password:
+        username:
