--- a/journey-through-health-fend/package.json
+++ b/journey-through-health-fend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "angular-mgl-timeline": "^0.4.0",
+    "moment": "^2.29.1",
     "ng-sidebar": "^9.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
